<resources>
    <string name="app_name">Керування рухомим об\'єктом</string>
    <string name="enable_p2p_button">P2P Ввімк/Вимк</string>
    <string name="discover_peers_button">Пошук</string>
    <string name="connect_peer_button">Підключитись</string>
    <string name="disconnect_peer_button">Відключитись</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">ТАК</string>
    <string name="no">НІ</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">Список пристроїв пустий</string>
    <string name="p2p_off_warning">Увімнкніть Enable P2P Wi-Fi Direct за допомогою меню або через налаштування телефону</string>
    <string name="group_owner_text">"Я власник групи? "</string>
    <string name="label_me">Ваш пристрій</string>
    <string name="label_peers">Рухомі об\'єкти</string>

    <!-- Wifi toggle -->
    <string name="wifi_on">Wi-Fi Direct увімкнено</string>
    <string name="wifi_off">Wi-Fi Direct вимкнено</string>

    <!-- Dialog wifi -->
    <string name="wifi_direct_is_not_enabled">Wi-Fi Direct не увімкнено на вашому пристрої</string>
    <string name="message_enable_wifi">Ви бажаєте увімкунти функцію Wi-Fi Direct?</string>

    <!-- Dialog discover peers -->
    <string name="finding_peers_title">Зачекайте, будь ласка</string>
    <string name="finding_peers_msg">Відбувається пошук рухомих об\'єктів</string>
    <string name="discover_init">Пошук пристроїв ініційований</string>
    <string name="discover_failed">Помилка ініціювання пошуку пристроїв. Код помилки: %d</string>

    <!-- Dialog connecting -->
    <string name="connecting_failure">З\'єднання завершилось невдачею. Повторіть</string>
    <string name="connecting_dlg_title">Зачекайте будь ласка</string>
    <string name="connecting_dlg_text">Відбувається з\'єднання з пристроєм %1$s.\n Фізична адреса : %2$s</string>
    <string name="aborting_connection">Переривання з\'єднання</string>
    <string name="aborting_failure">Переривання з\'єднання завершилось невдачею. Код помилки %d</string>

    <string name="manual_mode_button">Режим ручного управління</string>
    <string name="automatic_mode_button">Режим автоматичного управління</string>
    <string name="change_language">Змінити мову</string>
    <string name="change_language_title">Оберіть мову</string>
    <string name="lang_ua">Українська</string>
    <string name="lang_en">English</string>
    <string name="action_choose">ОБРАТИ</string>

    <string name="need_restart">Restart required</string>
    <string name="restart_app_info">Application needs to be restarted to apply new language settings</string>
    <string name="restart">Restart</string>
    <string name="later">Later</string>
    <string name="now">сейчас</string>

    <string-array name="languages_codes">
        <item>ua</item>
        <item>en</item>
    </string-array>

    <string name="action_cancel">Відміна</string>
    <string name="title_activity_automatical_mode">Map</string>

    <string name="run">Вперед</string>
    <string name="stop">Зупинити</string>
    <string name="go_to_manual">Перейти в режим ручного керування</string>
</resources>
